--- a/1_Choropleth/1.6_Add_Data.md
+++ b/1_Choropleth/1.6_Add_Data.md
@@ -26,7 +26,7 @@ The *Join layer* should be your *unwp* file.
 
 Find a field that is the same between the two files. The computer will only make a join when the data in the two fields is exactly the same. Use the country names to join the data.
 
-The *Join field* is the header of a field in the CSV file. The *Join field* is called *GeoAreaName* and the *Target field* is called *Name (En.)*. 
+The *Join field* is the header of a field in the CSV file. The *Join field* is called *GeoAreaName* and the *Target field* is called *M49 codes*. 
 
 Click *OK* and then click *OK* again.
 
