--- a/1_Choropleth/1.6_Add_Data.md
+++ b/1_Choropleth/1.6_Add_Data.md
@@ -26,11 +26,19 @@ The *Join layer* should be your *unwp* file.
 
 Find a field that is the same between the two files. The computer will only make a join when the data in the two fields is exactly the same. Use the country names to join the data.
 
-The *Join field* is the header of a field in the CSV file. The *Join field* is called *GeoAreaName* and the *Target field* is called *Name (En.)*. 
+The *Join field* is the header of a field in the CSV file. The *Join field* is called *GeoAreaCode* and the *Target field* is called *M49 Codes*. 
 
 Click *OK* and then click *OK* again.
 
-Open the Attribute Table for *UN_Countries_GDB-BNDA_simplified*. View the data to see if it has been joined correctly. Scroll to the middle to find the field *unwp_2020*. If some rows are NULL, that is okay. These are usually countries that there is no data for. If all countries are NULL, then there was an issue with your *Join*. If there is an issue, remove the join and try again. (Note: most of the columns on the right are null for this dataset).
+Open the Attribute Table for *UN_Countries_GDB-BNDA_simplified*. View the data to see if it has been joined correctly. Scroll to the middle to find the field *unwp_2020*. If some rows are NULL, that is okay. These are usually countries where there is no data. If all countries are NULL, there was an issue with your *Join*. If there is an issue, remove the join and try again. (Note: most of the columns on the right are null for this dataset).
+
+If you notice countries disappear - this means that there were countries that could not be joined. The problem could be that the M49 attribute is set as a string instead of a number. This needs to be fixed. To do this in QGIS - highlight the UN country polygon file data in the table of contents or layer pane. In the top menu - Click *Processing* then select *Toolbox* then find the *Refactor fields* tool to change the data type for M49 codes from string to integer and click run.   
+
+Now right click the layer and save as a new name and save as a shapefile. 
+
+Next, do the join layer steps again. 
+
+Once you have the file that looks correct save your work.
 
 Save *UN_Countries_GDB-BNDA_simplified* as a new file. You have only created a temporary join. Right click *UN_Countries_GDB-BNDA_simplified* in the *Layers* panel and click *Export→Save features as…*
 
