--- a/1_Choropleth/1.1_Scope.md
+++ b/1_Choropleth/1.1_Scope.md
@@ -2,7 +2,7 @@
 
 **Summary**
 
-**Tutorial 1.1** demonstrates how to design the ***choropleth map*** on page 34, which displays ***SDG*** Target 5.5.1: "Ensure women's full and effective participation and equal opportunities for leadership at all levels of decision-making" (*Figure 1.1-1*). 
+**Tutorial 1.1** demonstrates how to design the ***choropleth map*** on page 34, which displays ***SDG*** Target 5.5.1: "Ensure women's full and effective participation and equal opportunities for leadership at all levels of decision-making" (*Figure 1.1-1*). Each SDG indicator has a set of metadata or a methodology explaining how the data could be collected. You can find official <a href="https://unstats.un.org/sdgs/metadata/?text=mar">UN metadata</a> for each indicator here. 
 
 > ***Choropleth map***: a thematic map that shades enumeration units by their attribute values, primarily relying on colour value (see **Section 3.3**)
 
@@ -22,7 +22,7 @@ Before starting any map design, it is important to plan your project. **Tutorial
 
 Your design goal in the first set of tutorials is to create a map titled "Goal 5: Achieve Gender Equality and Empower All Women and Girls". This map is intended for a general audience.
 
-Your pedagogical goal in completing these tutorials is to learn the basics of QGIS to create a choropleth map (*Figure 1.1-3*, see **Section 3.3**). These tutorials will reference many sections of *Mapping for a Sustainable World* to learn about the map creation process.
+Your pedagogical goal in completing these tutorials is to learn the basics of QGIS to create a choropleth map (*Figure 1.1-3*, see **Section 3.3**). These tutorials will reference many sections of *Mapping for a Sustainable World* a textbook written to help learn about the map creation process.
 
 ![](1.1_Scope_images/image_2.png)
 
