--- a/1_Choropleth/1.1_Scope.md
+++ b/1_Choropleth/1.1_Scope.md
@@ -2,13 +2,15 @@
 
 **Summary**
 
-**Tutorial 1.1** demonstrates how to design the ***choropleth map*** on page 34, which displays ***SDG*** Target 5.5.1: "Ensure women's full and effective participation and equal opportunities for leadership at all levels of decision-making" (*Figure 1.1-1*). Each SDG indicator has a set of metadata or a methodology explaining how the data could be collected. You can find official <a href="https://unstats.un.org/sdgs/metadata/?text=mar">UN metadata</a> for each indicator here. 
+**Tutorial 1.1** demonstrates how to design the ***choropleth map*** on page 34, which displays ***SDG*** Target 5.5.1: "Ensure women's full and effective participation and equal opportunities for leadership at all levels of decision-making" (*Figure 1.1-1*). 
 
 > ***Choropleth map***: a thematic map that shades enumeration units by their attribute values, primarily relying on colour value (see **Section 3.3**)
 
 > ***Sustainable Development Goals (SDGs)***: the overarching blueprint to achieve a better and more sustainable future for all and to address global challenges, adopted in 2015 by the Member States of the United Nations (SDGs, see **Section 1.1**).
 
 ![](1.1_Scope_images/image_0.png)
+
+Each country collects it's own SDG indicator data as a form of data sovereignty, and then shares it with the responsible UN SDG indicator curating agency. Each SDG indicator has a set of metadata or a methodology explaining how the data could be collected. You can find official <a href="https://unstats.un.org/sdgs/metadata/?text=mar">UN metadata</a> for each indicator here. 
 
 ###### Figure 1.1-1: Final Choropleth map of SDG 5.5, from page 34 of Mapping for a Sustainable World.
 
