--- a/1_Choropleth/1.6_Add_Data.md
+++ b/1_Choropleth/1.6_Add_Data.md
@@ -10,7 +10,7 @@
 
 **Adding CSV Files**
 
-In the Menu bar, click *Layer→Add Layer→Add Delimited Text Layer*. Click the three dots and add *unwp.csv* to the project. Do not change any settings. Click *Add* and close the window.
+In the Menu bar, click *Layer→Add Layer→Add Delimited Text Layer*. Click the three dots and add *unwp.csv* to the project. Make sure *no geometry* is selected. This is a flat file with no coordinates. Click *Add* and close the window.
 
 Check if the data imported properly. Right click *unwp* in the *Layers* panel and click *Open Attribute Table*. View the data to make sure you do not see any issues. Close the tab.
 
