--- a/1_Choropleth/1.10_Labels.md
+++ b/1_Choropleth/1.10_Labels.md
@@ -14,7 +14,7 @@
 
 Right click on your *UN_wom_par_fiftyplus* layer and click *Properties*, then click the *Labels* tab on the right side. 
 
-At the top of the screen, change from *No labels* to *Single labels*. Set the *Value* to *MAPLAB*, a layer specifically designed as a label layer! 
+At the top of the screen, change from *No labels* to *Single labels*. Set the *Value* to *WHATEVER YOU WANT TO DISPLAY*, a layer specifically designed as a label layer! 
 
 Click *Apply* to view the placement of these labels. Then click *OK*.
 
@@ -28,7 +28,7 @@ On your Toolbar toward the top of the screen, click the pencil to *Toggle Editin
 
 Next, to edit the labels, click the button with abc next to a yellow pencil (![](1.10_Labels_images/image_1.png)) to *Change Label Properties*.
 
-Click each label, and change the *Text* to *Name: Percent*.
+Click each label, and change the *Text* to *Name: UNIT OF YOUR DATASET*.
 
 * United Arab Emirates: 50.0%
 * Bolivia: 53.1%
